--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,13 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
+    <meta name="title" content="Little Lemon" />
+    <meta name="description" content="Mediterranean restaurant, focused on traditional recipes served with a modern twist. The restaurant has a rustic and relaxed atmosphere with moderate prices."
     />
+    <meta name="og:title" content="Little Lemon" />
+    <meta name="og:description" content="Mediterranean restaurant, focused on traditional recipes served with a modern twist. The restaurant has a rustic and relaxed atmosphere with moderate prices." />
+    <meta name="og:image" content="https://d3c33hcgiwev3.cloudfront.net/imageAssetProxy.v1/VGeaOsOqSBKnmjrDqsgS6w_91a0ca1c7bbb4f3eb8512821fe49dde1_a3.png?expiry=1686700800000&hmac=NU67FphqwsjvidvQaRfHz2BRWloOP7XZc19lUCxNj5I" />
+  
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Little Lemon - A family owned mediterranean restaurant</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
